--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "babel-loader": "^7.0.0",
     "babel-preset-blue": "^1.0.0-beta.29",
     "compression-webpack-plugin": "^0.4.0",
+    "css-loader": "^0.28.7",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "jest": "^20.0.0",
     "ora": "^1.2.0",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
     "webpack": "^2.5.0",
-    "webpack-merge": "^4.1.0",
-    "jest": "^20.0.0"
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {},
   "files": [
